--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- <app-admin-dashboard></app-admin-dashboard> -->
 
-<!-- <app-request></app-request> -->
+<app-status></app-status>
 
-<app-forgot-password></app-forgot-password>
+
