--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -1,38 +1,44 @@
-<p>forgot-password works!</p>
 <div class="login-container">
-    <div class="inner-container" [ngClass]="{'error-class': fieldsEmpty !== ''}">
-      <h2>Forgot Password</h2>
-      <form (submit)="onSubmit()">
-        <div class="form-group">
-          <label for="username">Email-Id</label>
-          <input type="email" id="username" name="username" [(ngModel)]="username" autocomplete="off" required>
-        </div>
-        <div class="form-group">
-          <label for="Security-question">Choose a Security Question</label>
-          <select class="secQuestion" id="Security-question" name="Security-question" [(ngModel)]="secquestion" required>
-            <option value="">Select a security question</option>
-            <option *ngFor="let question of securityQuestions" [value]="question">{{ question }}</option>
-          </select>
-        </div>
-        <div class="form-group" *ngIf="secquestion !== ''">
-          <label for="Answer">Answer</label>
-          <input type="text" id="Answer" name="Answer" [(ngModel)]="answer" autocomplete="off" required>
-        </div>
-        <div class="form-group" *ngIf="answer !== ''">
-          <label for="password">Password</label>
-          <input type="{{ showPassword ? 'text' : 'password' }}" id="password" name="password" [(ngModel)]="password" autocomplete="off" required>
-          <p class="showPassword" (click)="togglePasswordVisibility()">
-            <i *ngIf="showPassword" class="bi bi-eye-slash"></i>
-            <i *ngIf="!showPassword" class="bi bi-eye"></i>
-          </p>
-        </div>
-        <button type="submit" class="fbutton">Submit</button>
-        <p class="mt-1" style="text-align: center;">
-          Remembered your password?
-          <a class="mt-1 d-block  link-success link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" [routerLink]="['/']">Login Here</a>
-        </p>
-        <div class="error-message text-center text-danger" *ngIf="fieldsEmpty !== ''">{{ fieldsEmpty }}</div>
-      </form>
-    </div>
+  <div
+    class="inner-container"
+    [ngClass]="{ 'error-class': fieldsEmpty !== '' }"
+  >
+    <h2>Forgot Password</h2>
+    <form (submit)="onSubmit()">
+      <div class="form-group">
+        <label for="username">Email-Id</label>
+        <input
+          type="email"
+          id="username"
+          name="username"
+          [(ngModel)]="username"
+          autocomplete="off"
+        />
+      </div>
+      <div class="form-group">
+        <label for="Security-question">Choose a Security Question</label>
+        <select
+          class="secQuestion"
+          id="Security-question"
+          name="Security-question"
+          [(ngModel)]="secquestion"
+        >
+          <option value="">Select a security question</option>
+          <option *ngFor="let question of securityQuestions" [value]="question">
+            {{ question }}
+          </option>
+        </select>
+      </div>
+      <div class="form-group" *ngIf="secquestion !== ''">
+        <label for="answer">Email-Id</label>
+        <input
+          type="text"
+          id="answer"
+          name="answer"
+          [(ngModel)]="answer"
+          autocomplete="off"
+        />
+      </div>
+    </form>
   </div>
-  
+</div>
